<resources>
    <string name="app_name">TriviaQuestion</string>
    <string name="select_category_label">Select Category</string>
    <string name="select_difficulty_label">Select Difficulty</string>
    <string name="select_answer_type_label">Select Answer Type</string>
    <string name="start_quiz_button_label">Start Quiz</string>
    <string name="start_quiz_invalid_message">Please complete all menus first and you can set amount to more than 50</string>
    <string name="amount_of_quiz_hint">Amount of quiz</string>
    <string name="loading">Loading</string>
    <string name="finish_quiz_button_label">Finish Quiz</string>
    <string name="button_label_true">True</string>
    <string name="button_label_false">False</string>
    <string name="a_choice">A .</string>
    <string name="b_choice">B .</string>
    <string name="c_choice">C .</string>
    <string name="d_choice">D .</string>
    <string name="your_score">Your Score</string>
</resources>